# Ness_eBay_automation

./: .gitignore  README.md  pyproject.toml  pytest_out.txt  pytest_out_short.txt
config/: settings.py
data/: browser_profiles.yaml  test_data.json
pages/: base_page.py  cart_page.py  home_page.py  product_page.py  search_results_page.py
results/: report.html
results/allure-results/: 134d5601-e8a8-4c71-99d2-f9b2c4280c75-container.json  1ee02157-ef13-4e11-900c-c0e3643ff959-attachment.txt  21db1c45-3ba4-4a71-98a9-3f2721072f7d-result.json  4474c0cd-7827-4865-8d49-87ef16a1152b-container.json  450949cd-fba0-4707-90cc-c04e6f6e360a-attachment.txt  53b34798-0378-45b2-98e3-9a87e077f879-container.json  6a2bc418-b850-434f-9b0a-76676006fcb3-container.json  6f01a927-fe37-4dd7-89b3-b6e7b910ed19-container.json  76d1eecf-8936-4018-8228-bfb2640bd9f7-container.json  7c9e4cba-a7fc-4f06-8e12-62dfcbb41615-container.json  9b6349b5-6dc7-47d3-992c-12dc85704735-container.json  a37c1103-3071-4a96-94bf-013bbd11480c-container.json  a3ee0bd6-8422-460d-9905-dd6d8a90fef6-container.json  a87ac80e-8903-4bd6-b117-1b31fa8d84e5-container.json  f5d0c1ca-43eb-416a-b1df-98298a6ed52c-result.json  f7020e96-9eda-4ab3-9d76-fbbe72a4f365-container.json  f7c76b22-c7aa-4007-a160-764e35cfb414-container.json  fc5fe3bc-2931-4dda-b889-b4c3476f19be-container.json
tests/: conftest.py  test_ecommerce.py
utils/: data_reader.py  locator_utility.py
